# KG-Agent-Experiment

./: .env copy  .gitignore  README.md  pyproject.toml
data/: zograscope_length_test_v1_answered_v3.csv  zograscope_length_train_v1_answered_v3.csv
data_prep/: enrich_allenrich.py  enrich_edge.py  enrich_nodedeg.py  enrich_relprop.py  prepare_ground_truth.py
eval/: eval_runner.py  eval_thread.py
kgagent/: agent.py  config.py  prompts.py  tools.py
results/: base_mixed_n2_seed88_20260628_205101.csv  base_mixed_n2_seed88_20260628_205101.json  base_mixed_n2_seed88_20260628_205610.csv  base_mixed_n2_seed88_20260628_205610.json  base_mixed_n6_seed88_20260628_210208.csv
run_logs/1506gpt0/: eval_mistral_base_mixed_n70_seed88_20260615_214822.csv  eval_mistral_base_mixed_n70_seed88_20260615_214822.json  eval_mistral_base_mixed_n70_seed88_20260616_124443.csv  eval_mistral_base_mixed_n70_seed88_20260616_124443.json  eval_mistral_base_mixed_n70_seed88_20260616_125455.csv  eval_mistral_base_mixed_n70_seed88_20260616_125455.json  eval_mistral_base_mixed_n70_seed88_20260616_133235.csv  eval_mistral_base_mixed_n70_seed88_20260616_133235.json
run_logs/1506mistral0/: medium_mistral_base_mixed_n70_seed88_20260617_081328.csv  medium_mistral_base_mixed_n70_seed88_20260617_081328.json  medium_mistral_base_mixed_n70_seed88_20260617_082452.csv  medium_mistral_base_mixed_n70_seed88_20260617_082452.json  medium_mistral_base_mixed_n70_seed88_20260618_121020.csv  medium_mistral_base_mixed_n70_seed88_20260618_121020.json  (+4 more)
scripts/: base.py  en1.py  en3.py  en4.py  mistral_en2.py
(+3 files in other folders)
