[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kgagent"
version = "0.1.0"
description = "A knowledge graph agent"
requires-python = ">=3.11"
dependencies = [
    # Knowledge graph
    "networkx>=3.0",
    "rdflib>=7.0",
    # LLM / agent
    "anthropic>=0.40.0",
    # Utilities
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "sparqlwrapper>=2.0.0",
    "langchain>=1.2.12",
    "langchain-azure-ai==1.1.0",
    "azure-identity>=1.25.3",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.2",
    "neo4j>=6.1.0",
    "langsmith>=0.7.17",
    "langchain-neo4j>=0.7.0",
    "pandas>=3.0.1",
    "openai>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.11",
    "langchain-mistralai>=1.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
